# robocup-sch

./: .gitignore  Config.py  Global.py  InitAllModules.py  README.md  SelectPlay.py  convert_lua_to_python.py  pyproject.toml  test.py  waited_to_convert.txt
Algorithm/: munkre.py
CppPackage/: CppPackage.pyi  __init__.py
GameControl/: Referee.py
Geometry/: __init__.py
Play/: __init__.py
Play/Config/: NationalCompetition2025.py
Play/Normal/: Defend.py  Jyz_v10.py  Jyz_v11.py  Jyz_v12.py  Jyz_v13.py  Jyz_v4.py  Jyz_v7.py  Jyz_v8.py  Jyz_v9.py  NoPass.py  NoPass_v2.py  NoPass_v3.py  NoPass_v4.py  NormalPlay_3vs3.py  Test111.py  TestPass.py  TestRushTo.py  TestShoot.py  Wyz_v1.py  Wyz_v2.py  Wyz_v3.py  Wyz_v4.py  Wyz_v5.py  Wyz_v6.py  Wyz_v7.py
Play/RefPlay/: BallPlace.py  DirectKick_2023.py  FreeKick.py  FreeKickDefend.py  GameHalt.py  GameStop.py  GameStop_2023.py  InDirectKick_2023.py  KickOff.py  KickOffDefend.py  KickOffDefend_2023.py  KickOff_2023.py  OurTimeout.py  PenaltyDefend.py  PenaltyKick.py  __init__.py
Play/Test/: Test_GetBall.py
RoleMatch_CppStyle/TaskGroups/: SimpleGoto.py  StateMachine.py
RoleMatch_LuaStyle/: State.py  StateMachine.py  Task.py  __init__.py
Strategy/: AttackInfomation.py  __init__.py
Utils/: BufferedCondition.py  __init__.py
Vision/: Ball.py  Enemy.py  Player.py  __init__.py
WorldModel/: ChipPower.py  Conditions.py  Directions.py  Flags.py  KickPower.py  Params.py  Positions.py  Precision.py  __init__.py
litgen_online/: README.md  WorldDefine.h  cpp_code_h_file.txt  original_demo.h.txt
(+12 files in other folders)
